# claude-code-worklog

./: .gitattributes  .typos.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  committed.toml  deny.toml  lefthook.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/rulesets/: README.md  main-branch.json  release-tags.json
.github/workflows/: audit.yml  ci.yml  codeql.yml  dependency-review.yml  release.yml  scorecard.yml
crates/worklog-cli/: Cargo.toml
crates/worklog-cli/src/: cli.rs  command.rs  commands.rs  main.rs
crates/worklog-cli/src/commands/: daily.rs  hook.rs  install_hooks.rs  meta.rs  period.rs  tail.rs
crates/worklog-cli/tests/: cli.rs
crates/worklog-core/: Cargo.toml
crates/worklog-core/src/: baseline.rs  digest.rs  error.rs  lib.rs  memory.rs  paths.rs  report.rs  store.rs  summarize.rs  transcript.rs
